<?xml version="1.0"?>
<package format="2">
  <name>ray_filter_ground</name>
  <version>0.0.1</version>
  <description>The ray_filter_ground package</description>


  <maintainer email="chaiwit.p@groupmaker.co.th">s</maintainer>

  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>



</package>
